[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/PlayerController.gd" type="Script" id=1]
[ext_resource path="res://Sprites/tesla/teslaBody1_400.png" type="Texture" id=2]
[ext_resource path="res://Sprites/tesla/wheel2,1_400.png" type="Texture" id=3]
[ext_resource path="res://Sprites/tesla/wheel2,2_400.png" type="Texture" id=4]
[ext_resource path="res://Sprites/animations/elon/New Piskel-3.png.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 251.078, 62 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 242
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="VerticalBulletPosition2D" type="Position2D" parent="."]
position = Vector2( -188, 100 )

[node name="HorizontalBulletPosition2D" type="Position2D" parent="."]
position = Vector2( 190, 120 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.999999, 109 )
scale = Vector2( 0.77665, 0.756079 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( -1, 87 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 2, 21 )
scale = Vector2( 0.76839, -0.82098 )
shape = SubResource( 1 )

[node name="Wheels" type="Node2D" parent="."]

[node name="Rear" type="Sprite" parent="Wheels"]
texture = ExtResource( 3 )

[node name="Front" type="Sprite" parent="Wheels"]
texture = ExtResource( 4 )

[node name="Elon" type="Sprite" parent="."]
position = Vector2( 43, 67 )
texture = ExtResource( 5 )
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
